# session-skein

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh  llms.txt
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  pages.yml  release.yml
crates/skein-cli/: Cargo.toml
crates/skein-cli/src/: indexing.rs  main.rs  mcp.rs  output.rs  progress.rs  tui.rs  update.rs  worker_runtime.rs
crates/skein-cli/tests/: cli.rs  docs_contract.rs  release_contract.rs
crates/skein-codex/: Cargo.toml
crates/skein-codex/src/: lib.rs
crates/skein-core/: Cargo.toml
crates/skein-core/src/: conductor.rs  context.rs  control.rs  freshness.rs  git.rs  insight.rs  lib.rs  monitor.rs  paths.rs  recall.rs  registry.rs  scan.rs  session.rs  worker.rs
docs/: architecture.md  cli-reference.md  codebase-map.md  codex-control.md  codex-preview.md  concepts.md  conductor.md  context-recall.md  documentation.md  getting-started.md  git-refresh.md  index.md  indexing-and-search.md  maintenance.md  matching-summaries.md  mcp-reference.md  mcp.md  privacy.md  releases.md  session-sync.md  state-and-configuration.md  troubleshooting.md  tui.md  workers.md
plugins/session-skein/: .mcp.json
plugins/session-skein/.codex-plugin/: plugin.json
plugins/session-skein/skills/session-skein/: SKILL.md
plugins/session-skein/skills/session-skein/agents/: openai.yaml
plugins/session-skein/skills/session-skein/references/: cli-fallback.md  mcp-workflows.md  privacy-and-control.md
scripts/: check-pages-links.py  release.py  stage-pages.py
site/: _config.yml  index.md
site/_data/: navigation.yml
site/_layouts/: default.html
site/assets/: site.css
tests/fixtures/fake-codex/: codex
tests/fixtures/fake-codex-windows/: codex.cmd  codex.ps1  fake-codex.ps1
tests/install/: unix-installer.sh  unix-release-installer.sh  windows-installer.ps1  windows-release-installer.ps1
