[workspace]
members = ["crates/skein-cli", "crates/skein-codex", "crates/skein-core"]
resolver = "2"

[workspace.package]
version = "0.5.0-alpha.11"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/session-skein/session-skein"
homepage = "https://github.com/session-skein/session-skein"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
iana-time-zone = "0.1.64"
rusqlite = { version = "0.40.1", features = ["bundled"] }
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
rmcp = { version = "2.2.0", default-features = false, features = ["server", "transport-async-rw"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0.27"
sha2 = "0.10.9"
skein-codex = { version = "0.5.0-alpha.11", path = "crates/skein-codex" }
skein-core = { version = "0.5.0-alpha.11", path = "crates/skein-core" }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
