[package]
name = "session-skein"
description = "A fast local conductor for coding-agent projects and sessions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "skein"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
skein-core.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
