[package]
name = "session-skein"
description = "A fast local conductor for coding-agent projects and sessions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "skein"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
directories.workspace = true
iana-time-zone.workspace = true
ratatui.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
skein-codex.workspace = true
skein-core.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
